2008-09-23	delx

	* Backed out duplicate change.
	* Don't allow toggling transparency in full screen mode
	* Full screen windows get a window title

2008-09-22  fabian
    
    * Fixed a bug that enables blur when de-miniaturizing windows.
	* Disable transparency in the full screen mode.
	* Fixed a transparency consistency problem when moving tabs between windows.
    
2008-09-20	fabian

	* Added support of ESC\ as the end of string to VT100Terminal.
	
2008-09-18  fabian

    * Minor UI change: Double-clicking a bookmark item now launches it.
    * UI change: Now bookmarks are sorted alphabetically.
    * UI change: Now you can open all items in a bookmark folder from the bookmark window.
    * UI change: The bookmarks window now has a column for shortcut key.
    * Minor UI change: Added shortcut key for menu Reset and Return to Default Size.
    * UI change: Double-clicking the tab bar now launches new tab.
    * UI change: Double-clicking the key-binding list now opens the edit sheet.
    * Fixed a bug that crashes iTerm when a profile is deleted.
    
2008-09-17  fabian

    * UI change: now there's separate close warning option plus a ">1" tab option.
    * Minor UI change: now the resize control is also hidden if the scroll bar is hidden.
    * Minor UI change: the optional bottom border's color is now windowFrameColor.
    
2008-09-15  fabian

    * Fixed a bug in the character cache handlings of PTYTextView. A new hash function is used.
    
2008-09-12  fabian

    * Fixed a bug in PTYTask that causes crashes when a session is terminated.
    * Fixed a bug related to window resizing deadlocks.

2008-09-13  delx

    * Check if locale exists before setting LANG environment variables (#2102884)
    * ISO8859-* and eucXX encodings will get correct environment variables
    * Keep menubar when setting full screen mode in a secondary screen (#2090939)
    * Multiple windows can now be in full screen mode, over different spaces and monitors
    
